header align problem fix

--- a/assets/sass/base/_helpers.scss
+++ b/assets/sass/base/_helpers.scss
@@ -21,3 +21,10 @@
   @include align-items(center);
   @include justify-content(center);
 }
+
+.basicflex-column {
+  @include flexbox();
+  @include align-items(center);
+  @include justify-content(center);
+  @include flex-direction(column);
+}
